@@ -26,6 +26,9 @@ RELEASE 0.09 -
 
  - Issue a warning and continue when finding a corrupt .sconsign file.
 
+ - Fix using an alias as a dependency of a target so that if one of the
+   alias' dependencies gets rebuilt, the resulting target will, too.
+
 
 
 RELEASE 0.08 - Mon, 15 Jul 2002 12:08:51 -0500
